CCPP/compiling_error.txt
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:4:7: error: unknown type name ‘__int64’
 const __int64 mod = 1000000007;
       ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:5:1: error: unknown type name ‘__int64’
 __int64 fac[N + 1];
 ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:6:1: error: unknown type name ‘__int64’
 __int64 Nim0[N + 1]
 ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:7:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__int64’
 __int64 Nim1[N + 1];
 ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:7:1: error: unknown type name ‘__int64’
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c: In function ‘main’:
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:10:2: error: unknown type name ‘__int64’
  __int64 x = 1;
  ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:20:2: error: unknown type name ‘__int64’
  __int64 n = x - 1;
  ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:21:2: error: ‘Nim0’ undeclared (first use in this function)
  Nim0[3] = n * (n - 1) % mod;
  ^~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:21:2: note: each undeclared identifier is reported only once for each function it appears in
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:22:2: error: ‘Nim1’ undeclared (first use in this function)
  Nim1[3] = (fac[3] - Nim[3] + mod) % mod;
  ^~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:22:22: error: ‘Nim’ undeclared (first use in this function)
  Nim1[3] = (fac[3] - Nim[3] + mod) % mod;
                      ^~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:25:3: error: unknown type name ‘__int64’
   __int64 t = ((Nim0[i - 2] * (i - 1) % mod) * (x - i + 1) % mod);
   ^~~~~~~
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:26:42: error: expected ‘;’ before ‘)’ token
   Nim0[i] = (Nim1[i - 1] - t + mod) % mod);
                                          ^
/home/aa/Documents/Git/Project-Euler-Solutions/CCPP/p409.c:26:42: error: expected statement before ‘)’ token
